test/langtools/tools/javac/valhalla/lworld-values/IllegalByValueTest.out
IllegalByValueTest.java:20:30: compiler.err.repeated.modifier
IllegalByValueTest.java:21:35: compiler.err.mod.not.allowed.here: inline
IllegalByValueTest.java:22:9: compiler.err.mod.not.allowed.here: inline
3 errors
